*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.28 ===
* Fixed invalid access to missing built-in resources.
* Fixed some command line options that caused JACK version to crash.
* Updated build scripts.

=== 1.0.27 ===
* Better support of MacOS.
* Added possibility to modify configuration parameters.
* Updated module versions in dependencies.

=== 1.0.26 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.25 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.24 ===
* Added system::get_user_login() function.
* Fixed io::Path::canonicalize() crashes on several input data.
* Added index_of_nocase and rindex_of_nocase methods for LSPString.
* Added io::OutMemoryStream::position() method implementation.
* Another implementation of ipc::SharedMutex for POSIX systems that allows to
  avoid dead locks when the application that locked the mutex has been
  terminated.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.23 ===
* Implemented IInSequence::sink() method for writing all content to another IOutSequence.
* Fixed possible access to uninitialized memory when loading built-in resources.
* Added Thread::yield() method.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.22 ===
* Implemented system::page_size() and system::system_cores() functions.
* Extended ipc::SharedMem interface.
* Implemented UUID generation and formatting header.
* Updated module versions in dependencies.

=== 1.0.21 ===
* Fixed reading of 32-bit FLOAT WAV files that do not contain fact chunk on Windows.
* Implemented min(), max(), rms() and avg() builtin functions for expression language.
* Implemented io::Path::final_path method for obtaining the final file system object
  the abstract path points to.